--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -6,7 +6,8 @@
     <title>Twitter Clone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/homepage.css"
 
 </head>
 <body>
@@ -126,31 +127,31 @@
                 <div class="form-group row">
                     <!-- <label for="reg-email" class="col-2 col-form-label">Email</label> -->
                     <div class="col-12">
-                        <input type="email" class="form-control" id="reg-email" name="reg-email" placeholder="Email"  value="a@a" required>
+                        <input type="email" class="form-control" id="reg-email" name="email" placeholder="Email"  value="a@a" required>
                     </div>
                     
                 </div>
                 <div class="form-group row">
-                    <!-- <label for="reg-handel" class="col-2 col-form-label">Handel</label> -->
+                    <!-- <label for="reg-handle" class="col-2 col-form-label">handle</label> -->
                     <div class="col-12 input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text">@</div>
                         </div>
-                        <input type="text" class="form-control" id="reg-handel" name="handel" value="a" placeholder="Handel" required>
+                        <input type="text" class="form-control" id="reg-handle" name="handle" value="a" placeholder="handle" required>
                     </div>
 
                 </div>
                 <div class="form-group row">
                     <!-- <label for="reg-password-1" class="col-2 col-form-label">Password</label> -->
                     <div class="col-12">
-                        <input type="password" class="form-control" id="reg-password-1"  name="password-1" value="a" placeholder="Password" required>
+                        <input type="password" class="form-control" id="reg-password-1"  name="password" value="a" placeholder="Password" required>
                     </div>
                     
                 </div>
                 <div class="form-group row">
                     <!-- <label for="reg-password-2" class="col-2 col-form-label">Re-enter Password</label> -->
                     <div class="col-12">
-                        <input type="password" class="form-control" id="reg-password-2" name="password-2" value="a" placeholder="re-enter Password" required>
+                        <input type="password" class="form-control" id="reg-password-2" name="re-password" value="a" placeholder="re-enter Password" required>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -180,18 +181,18 @@
                 <div class="modal-body">
                 <form id="signin-form">
                     <div class="form-group row">
-                        <!-- <label for="reg-handel" class="col-2 col-form-label">Handel</label> -->
+                        <!-- <label for="reg-handle" class="col-2 col-form-label">handle</label> -->
                         <div class="col-12 input-group">
                             <div class="input-group-prepend">
                                 <div class="input-group-text">@</div>
                             </div>
-                            <input type="text" class="form-control" name="handel" id="signin-handel" placeholder="Handel" required>
+                            <input type="text" class="form-control" name="handle" id="signin-handle" placeholder="handle" required>
                         </div>
                     </div>
                     <div class="form-group row">
                         <!-- <label for="reg-password-1" class="col-2 col-form-label">Password</label> -->
                         <div class="col-12">
-                            <input type="password" class="form-control" name="password-1" id="reg-password-1" placeholder="Password" required>
+                            <input type="password" class="form-control" name="password" id="signin-password-1" placeholder="Password" required>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -211,6 +212,6 @@
     <script src="http://code.jquery.com/jquery-3.3.1.js"  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
-    <script src="main.js"></script>
+    <script src="/javascripts/homepage.js"></script>
 </body>
 </html>
