--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -75,6 +75,17 @@
     /* margin-top:5%; */
 }
 
+#loading-spinner{
+    text-align: center;
+    margin-top: 30px;
+}
+
+#loading-spinner i{
+    font-size:40px;
+}
+
+
+
 .tweet-box{
     border-radius: 10px;
     background: white;
