change socket io to use user session

--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -39,7 +39,7 @@
                         <p class="bio-text">
                             here's some text about this guy and his twitter page. Give him some tweets or whatever.
                         </p>
-                        <button id="follow-btn" class="btn btn-primary"> Follow </button>
+                        <button id="follow-btn" class="btn btn-primary" value=<%= user%> > Follow </button>
                     </div>
                     
                 </div>
