--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -69,13 +69,13 @@
                                 <div class="input-group-prepend">
                                     <div class="input-group-text">@</div>
                                 </div>
-                                <input type="text" class="form-control" name="handle" id="signin-handle" placeholder="handle" required>
+                                <input type="text" class="form-control" name="handle" id="signin-handle" value="a" placeholder="handle" required>
                             </div>
                         </div>
                         <div class="form-group row">
                             <!-- <label for="reg-password-1" class="col-2 col-form-label">Password</label> -->
                             <div class="col-12">
-                                <input type="password" class="form-control" name="password" id="signin-password-1" placeholder="Password" required>
+                                <input type="password" class="form-control" name="password" id="signin-password-1" value="a" placeholder="Password" required>
                             </div>
                         </div>
                         <div class="form-group row">
