--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1,8 +1,3 @@
-.bio-text-container{
-    border-radius: 13px;
-    padding: 5px;
-    background: white;   
-}
 
 #top-nav{
     background-color: white;
@@ -13,6 +8,13 @@
     background-color: gray;
 }
 
+#logout-btn{
+    background-color: white;
+}
+
+#logout-btn:hover{
+    background-color: #007bff;
+}
 
 .top-bar ul{
     list-style-type: none;
@@ -46,6 +48,18 @@
 }
 
 
+/* user info container */
+.bio-text-container{
+    border-radius: 13px;
+    padding: 5px;
+    background: white;   
+}
+.hidden{
+    display: none;
+}
+
+
+/* tweet from styling */
 
 #tweet-ta{
     min-height: 100px;
@@ -70,6 +84,8 @@
     color: blue;
     font-weight: bold;
 }
+
+/* tweet container styling */
 
 #tweet-container{
     /* margin-top:5%; */
