--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -14,11 +14,9 @@
 <body>
         <div  class="container">
             <nav id="top-nav" class="navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
-                <a class="navbar-brand" href="#">Twitter?</a>
+                <a class="navbar-brand" href="/homepage/<%= currentUser.handle %>">Twitter?</a>
                 <div class="btn-container  ml-auto">
-                    <button id="logout-btn" type="button" class="btn btn-outline-primary" >Log out</button>
-                    <button id="register-btn" type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#reg-modal">Register</button>
-                    <button id="sign-in-btn" type="button" class="btn btn-outline-primary"  data-toggle="modal" data-target="#signin-modal">Sign in</button>
+                    <a id="logout-btn" type="button" class="btn btn-outline-primary " role="button" href="/auth/logout" >Log out</a>
                 </div>
                 
             </nav>
@@ -38,14 +36,23 @@
                         </h4>
                         <p class="bio-text">
                             here's some text about this guy and his twitter page. Give him some tweets or whatever.
-                        </p>
-                        <button id="follow-btn" class="btn btn-primary" value=<%= user%> > Follow </button>
+                        </p> 
+                        <input id="current-user" type="hidden"  value=<%= currentUser.handle %> >
+                        <% if(currentUser.handle !== user) { %>
+                            <% let follow = currentUser.following.includes(user) ? "hidden": "" %>
+                            <% let unfollow = currentUser.following.includes(user) ? "": "hidden" %>
+                            <button id="unfollow-btn" class="btn btn-primary <%= unfollow %>" value=<%= user%> > Unfollow </button>
+                            <button id="follow-btn" class="btn btn-primary <%= follow %>" value=<%= user%> > Follow </button>
+                            
+                        
+                        <%} %>
                     </div>
                     
                 </div>
             </div>
 
             <div class="col-sm-6">
+                <% if(currentUser.handle === user){ %>
                 <div class="jumbotron " id="jumbotron-container">
                     <form id="tweet-form">
                         <textarea id="tweet-ta" class="form-control" required></textarea>
@@ -65,7 +72,7 @@
                         
                     </div>
                 </div>
-
+                <% } %>
                 <div class="table-container">
 
                     <div class="top-bar-container col-sm-12">
@@ -106,102 +113,6 @@
         </div>
 
     </div>
-
-<!-- Button trigger modal -->      
-      <!-- Modal -->
-      <div class="modal fade" id="reg-modal" tabindex="-1" role="dialog" aria-labelledby="reg-modalTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="reg-modalTitle">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-            <form id="reg-form">
-                <div class="form-group row">
-                    <!-- <label for="reg-email" class="col-2 col-form-label">Email</label> -->
-                    <div class="col-12">
-                        <input type="email" class="form-control" id="reg-email" name="email" placeholder="Email"  value="a@a" required>
-                    </div>
-                    
-                </div>
-                <div class="form-group row">
-                    <!-- <label for="reg-handle" class="col-2 col-form-label">handle</label> -->
-                    <div class="col-12 input-group">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text">@</div>
-                        </div>
-                        <input type="text" class="form-control" id="reg-handle" name="handle" value="a" placeholder="handle" required>
-                    </div>
-
-                </div>
-                <div class="form-group row">
-                    <!-- <label for="reg-password-1" class="col-2 col-form-label">Password</label> -->
-                    <div class="col-12">
-                        <input type="password" class="form-control" id="reg-password-1"  name="password" value="a" placeholder="Password" required>
-                    </div>
-                    
-                </div>
-                <div class="form-group row">
-                    <!-- <label for="reg-password-2" class="col-2 col-form-label">Re-enter Password</label> -->
-                    <div class="col-12">
-                        <input type="password" class="form-control" id="reg-password-2" name="re-password" value="a" placeholder="re-enter Password" required>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-12">
-                        <button type="submit" class="btn btn-primary">Register</button>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>                    
-                </div>
-            </form>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <!-- TODO - fix this section so I'm using 1 modal instead of 2-->
-
-      <div class="modal fade" id="signin-modal" tabindex="-1" role="dialog" aria-labelledby="signin-modal-title" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="signin-modal-title">Sign In</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                <form id="signin-form">
-                    <div class="form-group row">
-                        <!-- <label for="reg-handle" class="col-2 col-form-label">handle</label> -->
-                        <div class="col-12 input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">@</div>
-                            </div>
-                            <input type="text" class="form-control" name="handle" id="signin-handle" placeholder="handle" required>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <!-- <label for="reg-password-1" class="col-2 col-form-label">Password</label> -->
-                        <div class="col-12">
-                            <input type="password" class="form-control" name="password" id="signin-password-1" placeholder="Password" required>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-primary">Sign in</button>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div>                    
-                    </div>
-                </form>
-                </div>
-              </div>
-            </div>
-          </div>
 
 
 
